[CSE] Fix style issues on IE 10
- Fix text color of language `select` at mobile menu layer (all
browsers)
- Display logos in footer + header
- Fix 404 image

--- a/frontend/src/Explorer/View/common.css
+++ b/frontend/src/Explorer/View/common.css
@@ -339,6 +339,7 @@
   background-size: 8px 8px;
   padding-right: 10px;
   box-item: center;
+  color: color(var(--color0) a(0.5));
 
   &:hover{
     cursor: pointer;
